build: lost dist folder in npm for CDN

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "pretest": "clinton && npm run lint"
   },
   "files": [
-    "lib/"
+    "lib/",
+    "dist/"
   ],
   "keywords": [
     "card",
