--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 environment:
   matrix:
+    - nodejs_version: "latest"
     - nodejs_version: "stable"
-    - nodejs_version: "lts/*"
     - nodejs_version: "8"
 
 version: "{build}"
