--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 environment:
   matrix:
-    - nodejs_version: "latest"
+    - nodejs_version: "lts"
     - nodejs_version: "stable"
     - nodejs_version: "8"
 
