perf: change to credit-card-input-mask

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "clinton": "^0.14.0",
     "conventional-changelog-cli": "^2.0.12",
     "coveralls": "^3.0.3",
+    "credit-card-input-mask": "^2.0.1",
     "eslint": "^5.12.1",
     "eslint-config-vue": "^2.0.2",
     "eslint-config-xo": "^0.26.0",
@@ -68,7 +69,6 @@
     "require-extension-hooks": "^0.3.3",
     "require-extension-hooks-babel": "^1.0.0",
     "require-extension-hooks-vue": "^3.0.0",
-    "restricted-input": "^2.0.1",
     "rimraf": "^2.6.3",
     "rollup": "^1.1.2",
     "rollup-plugin-babel": "^4.3.2",
