--- a/.editorconfig
+++ b/.editorconfig
@@ -5,16 +5,14 @@ indent_style = space
 indent_size = 4
 end_of_line = lf
 charset = utf-8
+quote_type = single
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{json,yml,jade,pss,css,html,js}]
+[{*.json,*.yaml,*.yml,*.jade,*.pss,*.css,*.js,*.md,.*,*.ts}]
 indent_size = 2
 
-[changelog.md]
-insert_final_newline = false
-
-[*.html]
+[{changelog.md,.*}]
 insert_final_newline = false
 
 [*.md]
